--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.2",
     "@nextui-org/button": "^2.0.38",
     "@nextui-org/navbar": "^2.0.36",
     "@nextui-org/react": "^2.4.8",
